@@ -3,17 +3,14 @@ package com.example.demo.dto;
 import jakarta.validation.Valid;
 import jakarta.validation.constraints.NotEmpty;
 import jakarta.validation.constraints.NotNull;
-import lombok.Data;
-import lombok.NoArgsConstructor;
-
-import java.util.Collections;
 import java.util.List;
 
-@Data
-@NoArgsConstructor
-public class TimesheetBatchSaveRequest {
+public record TimesheetBatchSaveRequest(
     @NotNull
     @NotEmpty
-    private List<@Valid TimesheetBatchEntryRequest> entries = Collections.emptyList();
+    List<@Valid TimesheetBatchEntryRequest> entries
+) {
+    public TimesheetBatchSaveRequest() {
+        this(List.of());
+    }
 }
-
